Update Revelio Labs basic version.ipynb

--- a/Revelio Labs basic version.ipynb
+++ b/Revelio Labs basic version.ipynb
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 71,
    "id": "17e8fc8f",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 72,
    "id": "781fde87",
    "metadata": {
     "scrolled": true
@@ -2392,24 +2392,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>true_or_predicted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>33931</th>\n",
+       "      <td>++5SW5MI5/h8X1hMA3QnmQ4ZM3TcQvn1bQ/jHgHWG0kf/b...</td>\n",
+       "      <td>92</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33932</th>\n",
+       "      <td>++5qk2+uEmkI/3Z4FrBwDw4ZM3TcQvn1bQ/jHgHWG0kf/b...</td>\n",
+       "      <td>59</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33933</th>\n",
+       "      <td>++6+hv3i5RAVsrWO8q5JEQ5+2cvffV/mNepQVJd0smgtpB...</td>\n",
+       "      <td>29</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33934</th>\n",
+       "      <td>++7kB6m0hI1TgAPmyY1X6A5+2cvffV/mNepQVJd0smgtpB...</td>\n",
+       "      <td>39</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33935</th>\n",
+       "      <td>++9DtAOTiRRvECoMIpKbmg4ZM3TcQvn1bQ/jHgHWG0kf/b...</td>\n",
+       "      <td>38</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99995</th>\n",
+       "      <td>zzZdW3VGODRxRl2025ZR2w5+2cvffV/mNepQVJd0smgtpB...</td>\n",
+       "      <td>36</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99996</th>\n",
+       "      <td>zzrNxfUzwZXNkSs15haLyA4ZM3TcQvn1bQ/jHgHWG0kf/b...</td>\n",
+       "      <td>57</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99997</th>\n",
+       "      <td>zzrbQXjc2yHwbWjtQ9F3mg5+2cvffV/mNepQVJd0smgtpB...</td>\n",
+       "      <td>32</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99998</th>\n",
+       "      <td>zzuZVPanBvW09lNk1C3h+Q5+2cvffV/mNepQVJd0smgtpB...</td>\n",
+       "      <td>31</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99999</th>\n",
+       "      <td>zzvZxBSf81furoFl3PcSuHAG1BvSkUYANepQVJd0smgtpB...</td>\n",
+       "      <td>28</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>66069 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'++8qqHNDQSyp1Yd45ROBZg5+2cvffV/mNepQVJd0smgtpBr4MGMFJQ=='"
+       "                                                 user_id  age  \\\n",
+       "33931  ++5SW5MI5/h8X1hMA3QnmQ4ZM3TcQvn1bQ/jHgHWG0kf/b...   92   \n",
+       "33932  ++5qk2+uEmkI/3Z4FrBwDw4ZM3TcQvn1bQ/jHgHWG0kf/b...   59   \n",
+       "33933  ++6+hv3i5RAVsrWO8q5JEQ5+2cvffV/mNepQVJd0smgtpB...   29   \n",
+       "33934  ++7kB6m0hI1TgAPmyY1X6A5+2cvffV/mNepQVJd0smgtpB...   39   \n",
+       "33935  ++9DtAOTiRRvECoMIpKbmg4ZM3TcQvn1bQ/jHgHWG0kf/b...   38   \n",
+       "...                                                  ...  ...   \n",
+       "99995  zzZdW3VGODRxRl2025ZR2w5+2cvffV/mNepQVJd0smgtpB...   36   \n",
+       "99996  zzrNxfUzwZXNkSs15haLyA4ZM3TcQvn1bQ/jHgHWG0kf/b...   57   \n",
+       "99997  zzrbQXjc2yHwbWjtQ9F3mg5+2cvffV/mNepQVJd0smgtpB...   32   \n",
+       "99998  zzuZVPanBvW09lNk1C3h+Q5+2cvffV/mNepQVJd0smgtpB...   31   \n",
+       "99999  zzvZxBSf81furoFl3PcSuHAG1BvSkUYANepQVJd0smgtpB...   28   \n",
+       "\n",
+       "       true_or_predicted  \n",
+       "33931              False  \n",
+       "33932              False  \n",
+       "33933              False  \n",
+       "33934              False  \n",
+       "33935              False  \n",
+       "...                  ...  \n",
+       "99995              False  \n",
+       "99996              False  \n",
+       "99997              False  \n",
+       "99998              False  \n",
+       "99999              False  \n",
+       "\n",
+       "[66069 rows x 3 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in range (5):\n",
-    "    user=df_all.loc[1,'user_id']\n",
-    "    "
+    "tamere=df_all[~df_all['true_or_predicted']]\n",
+    "tamere.reset_index(drop=True)\n",
+    "tamere"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      major   startdate     enddate\n",
+      "99508    BS  1949-01-01  1953-01-01\n",
+      "                                jobtitle   startdate enddate\n",
+      "41525  former_owner_presently_consultant  1953-01-01     NaN\n",
+      "                                jobtitle  seniority\n",
+      "90141  former_owner_presently_consultant   7.064817\n",
+      "=========\n",
+      "                   major   startdate     enddate\n",
+      "92083  BS in Electronics  1973-01-01  1978-01-01\n",
+      "92505                NaN  1984-01-01  1987-01-01\n",
+      "                                                 jobtitle   startdate  \\\n",
+      "9781                    owner_|_computer_network_security  1993-06-01   \n",
+      "106525  design_engineer_|_mechanical_industrial_engine...  1984-10-01   \n",
+      "\n",
+      "           enddate  \n",
+      "9781           NaN  \n",
+      "106525  1989-05-01  \n",
+      "                                                 jobtitle  seniority\n",
+      "71129   design_engineer_|_mechanical_industrial_engine...   3.331507\n",
+      "222292                  owner_|_computer_network_security   7.334247\n",
+      "=========\n",
+      "                      major   startdate     enddate\n",
+      "133238  Master Grande Ecole  2013-01-01  2016-01-01\n",
+      "                                                 jobtitle   startdate  \\\n",
+      "228241  digital_communication_press_relations_|_cosmetics  2016-07-01   \n",
+      "228215             assistant_business_development_manager  2014-06-01   \n",
+      "176460  trainee_digital_brand_commerce_crm_implementat...  2018-04-01   \n",
+      "237149  trainee_digital_brand_commerce_digital_plannin...  2017-09-01   \n",
+      "200727  sales_business_development_executive_|_events_...  2017-06-01   \n",
+      "30076                     event_promoter_public_relations  2015-07-01   \n",
+      "220136  trainee_digital_brand_commerce_membership_prog...  2018-09-01   \n",
+      "23563          freelance_author_lucifer_manga_books_serie  2016-12-01   \n",
+      "213101  digital_communication_social_medias_activation...  2016-11-01   \n",
+      "\n",
+      "           enddate  \n",
+      "228241  2016-10-01  \n",
+      "228215  2014-08-01  \n",
+      "176460         NaN  \n",
+      "237149  2018-03-01  \n",
+      "200727  2017-08-01  \n",
+      "30076   2015-08-01  \n",
+      "220136         NaN  \n",
+      "23563   2017-08-01  \n",
+      "213101  2017-05-01  \n",
+      "                                                 jobtitle  seniority\n",
+      "399946  digital_communication_social_medias_activation...   4.307247\n",
+      "220871                    event_promoter_public_relations   1.908356\n",
+      "351436  trainee_digital_brand_commerce_membership_prog...   4.307247\n",
+      "354892  trainee_digital_brand_commerce_digital_plannin...   4.307247\n",
+      "111281  sales_business_development_executive_|_events_...   3.439384\n",
+      "44321          freelance_author_lucifer_manga_books_serie   4.020771\n",
+      "333670  digital_communication_press_relations_|_cosmetics   4.307247\n",
+      "24521              assistant_business_development_manager   3.787412\n",
+      "372408  trainee_digital_brand_commerce_crm_implementat...   4.307247\n",
+      "=========\n",
+      "                  major   startdate     enddate\n",
+      "106134  Master's Degree  2008-01-01         NaN\n",
+      "106774              NaN  2012-01-01  2013-01-01\n",
+      "106190               BS  1996-01-01  1997-01-01\n",
+      "                                                 jobtitle   startdate  \\\n",
+      "311981                                           director  2012-08-01   \n",
+      "324558                                  preschool_teacher  2011-06-01   \n",
+      "280513            sr_research_associate_|_pharmaceuticals  1999-09-01   \n",
+      "320187           validation_scientist_|_computer_software  2014-09-01   \n",
+      "72818                           clinical_data_coordinator  2004-09-01   \n",
+      "245906   computational_chemistry_intern_|_pharmaceuticals  1997-12-01   \n",
+      "330491                                 substitute_teacher  2011-01-01   \n",
+      "288582  validation_scientist_bristol_myers_squibb_co_|...  2005-05-01   \n",
+      "351507           validation_scientist_|_computer_software  2008-03-01   \n",
+      "\n",
+      "           enddate  \n",
+      "311981  2014-02-01  \n",
+      "324558  2012-08-01  \n",
+      "280513  2003-12-01  \n",
+      "320187         NaN  \n",
+      "72818   2005-05-01  \n",
+      "245906  1998-12-01  \n",
+      "330491  2011-05-01  \n",
+      "288582  2007-09-01  \n",
+      "351507  2012-12-01  \n",
+      "                                                 jobtitle  seniority\n",
+      "385257   computational_chemistry_intern_|_pharmaceuticals   4.142466\n",
+      "343977  validation_scientist_bristol_myers_squibb_co_|...   2.750685\n",
+      "20790                           clinical_data_coordinator   3.610914\n",
+      "375097           validation_scientist_|_computer_software   4.713699\n",
+      "231173            sr_research_associate_|_pharmaceuticals   5.046575\n",
+      "248331                                           director   7.421538\n",
+      "11467                                  substitute_teacher   2.039746\n",
+      "343355                                  preschool_teacher   2.855363\n",
+      "=========\n",
+      "         major   startdate     enddate\n",
+      "29395  B. Tech  2002-01-01  2006-01-01\n",
+      "29488      MSc  2009-01-01  2010-01-01\n",
+      "                                                jobtitle   startdate  \\\n",
+      "149353                      business_development_manager  2007-01-01   \n",
+      "163857  business_development_manager_|_computer_software  2007-07-01   \n",
+      "136336          post_graduate_student_|_higher_education  2009-01-01   \n",
+      "\n",
+      "           enddate  \n",
+      "149353  2007-07-01  \n",
+      "163857  2008-12-01  \n",
+      "136336         NaN  \n",
+      "                                                jobtitle  seniority\n",
+      "411244                      business_development_manager   5.325018\n",
+      "251617  business_development_manager_|_computer_software   5.002740\n",
+      "25815           post_graduate_student_|_higher_education   3.793151\n",
+      "=========\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (33931,33931+5):\n",
+    "    user=tamere.loc[i,'user_id']\n",
+    "    get_user_history(user)\n",
+    "    print('=========')"
    ]
   },
   {
