--- a/Revelio Labs Linkedin .ipynb
+++ b/Revelio Labs Linkedin .ipynb
@@ -714,7 +714,7 @@
    "id": "75c6a7de",
    "metadata": {},
    "source": [
-    "# 2. Splitting the data to get training data \n",
+    "# 2. Splitting the data to get the training data \n",
     "\n",
     "## dataprocessing will be done after to prevent data leakage"
    ]
@@ -5057,13 +5057,7 @@
       "16/16 [==============================] - 0s 19ms/step - loss: 0.1865 - mean_absolute_error: 0.2468 - val_loss: 0.1819 - val_mean_absolute_error: 0.2538\n",
       "Epoch 61/100\n",
       "\n",
-      "Epoch 00061: LearningRateScheduler setting learning rate to 0.009999999776482582.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 00061: LearningRateScheduler setting learning rate to 0.009999999776482582.\n",
       "16/16 [==============================] - 0s 20ms/step - loss: 0.1870 - mean_absolute_error: 0.2455 - val_loss: 0.1952 - val_mean_absolute_error: 0.2743\n",
       "Epoch 62/100\n",
       "\n",
