--- a/Revelio Labs Linkedin .ipynb
+++ b/Revelio Labs Linkedin .ipynb
@@ -513,7 +513,7 @@
    "id": "71384a32",
    "metadata": {},
    "source": [
-    "#### Not all data frames have 100k users, all have to take this into account when merging the data frames.\n",
+    "#### Not all data frames have 100k users, we have to take this into account when merging the data frames.\n",
     "We will assume that we want to predict the age of all users"
    ]
   },
@@ -3184,6 +3184,7 @@
    ],
    "source": [
     "for i,feature in enumerate(feature_cols):\n",
+    "    #normalize for comparison\n",
     "    line,=plt.plot(coefs[i]/np.linalg.norm(coefs[i]), label=feature)\n",
     "plt.title('feature_importances over time')\n",
     "plt.legend()\n",
@@ -4322,7 +4323,7 @@
     "#merging everything\n",
     "df_all=pd.concat([train_data,val_data, df_all], axis=0)\n",
     "\n",
-    "#convert brithdays to age\n",
+    "#convert birthdays to age\n",
     "now = datetime.now()\n",
     "today=now.year+now.month/13\n",
     "df_all['age']=(today-df_all['label']).astype(int)\n",
@@ -5324,7 +5325,7 @@
     "y_pred =scalers[-1].inverse_transform(y_pred.reshape(-1,1)).reshape(-1)\n",
     "y_true =scalers[-1].inverse_transform(y_val.reshape(-1,1)).reshape(-1)\n",
     "print('val r2 score',r2_score(y_true, y_pred))\n",
-    "print('val explained_variance_score',explained_variance_score(y_true, y_pred))\n",
+    "print('val explained_va`riance_score',explained_variance_score(y_true, y_pred))\n",
     "print('validation mean abs error',mean_absolute_error(y_true, y_pred))\n",
     "print('validation RMSE',mean_squared_error(y_true, y_pred,squared=False))"
    ]
